# intro_py

./: Makefile  README.rst  exclude.lst  vcs_bkup.sh
_templates/jinja/: render_jinja.py  usage.txt
_templates/jinja/skeleton-py/: copier.yaml  data.json  (+2 more)
_templates/jinja2/: render_jinja2.py
_templates/mustache/: render_mustache.groovy  render_mustache.py  render_mustache.rb  usage.txt
api/: .bumpversion.cfg  HISTORY.rst  Makefile  Makefile-auxffi.mk  README.rst  nose2.cfg  requirements.txt  setup.cfg  setup.py
api/docs/: conf.py  index.rst
app/: .bumpversion.cfg  HISTORY.rst  Makefile  Makefile-auxffi.mk  README.rst  nose2.cfg  pyproject.toml  requirements-internal.txt  requirements.txt  setup.cfg  setup.py
app/docs/: conf.py  index.rst
app/intro_py/intro/: __init__.py  __main__.py  cli.py  lib.py  person.py
app/intro_py/intro/resources/: pkginfo.json
app/intro_py/intro/tests/: __init__.py  __main__.py  test_collections.py  test_new.py  test_props_lists.py  test_props_new.py  ts_main.py
common/: .bumpversion.cfg  Makefile  Makefile-auxffi.mk  Makefile.bak  README.rst  nose2.cfg  requirements.txt  setup.cfg  setup.cfg.old  setup.py  setup_addcmds.py
common/docs/: conf.py  index.rst
foreignc/: .bumpversion.cfg  Makefile  Makefile-auxffi.mk  README.rst  nose2.cfg  requirements.txt  setup.cfg  setup.py
foreignc/docs/: conf.py  index.rst
scriptexplore/: .bumpversion.cfg  .gitignore  .hgignore  HISTORY.rst  Makefile  Makefile-auxffi.mk  README.rst  exclude.lst  nose2.cfg  requirements.txt  setup.cfg  setup.py
scriptexplore/docs/: conf.py  index.rst
(+297 files in other folders)
